It's safe to use toList()